src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>dwp_kitv__Takeaway_client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client owns this takeaway. The task created will be used to follow up the status of the takeaway</description>
        <inlineHelpText>Client owns this takeaway. The task created will be used to follow up the status of the takeaway</inlineHelpText>
        <label>Client&apos;s Takeaway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_changed_bool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if event is changed in the launch meeting of the visit.</description>
        <label>visit changed bool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to relate the events that come from a visit information.</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Google_Event_FK__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GBL_Google_Event_FK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Google_Event_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Google Event Id_old</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>slmt__management_plan_meeting_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sales meeting which drives the task. That means, in which meeting this task will be cover.</description>
        <inlineHelpText>The sales meeting which drives the task. That means, in which meeting this task will be cover.</inlineHelpText>
        <label>Sales Meeting</label>
        <referenceTo>slmt__Sales_Meeting__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>visit_responsible__c</fullName>
        <label>Responsable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BBVA</fullName>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>